[package]
name = "fbm"
version = "0.1.0"
authors = ["Matthew Scheffel <mscheffel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools-num = "0.1.3"
ndarray = "0.13.1"
rand = "0.7.3"
rand_distr = "0.3.0"
rustfft = "4.0.0"